<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.expretio</groupId>
        <artifactId>internal-parent</artifactId>
        <version>8</version>
    </parent>

    <groupId>com.expretio.maven.plugins</groupId>
    <artifactId>capnproto-maven-plugin</artifactId>
    <version>1.0-SNAPSHOT</version>

    <name>capnproto-maven-plugin</name>

    <packaging>maven-plugin</packaging>

    <inceptionYear>2015</inceptionYear>

    <organization>
        <name>expretio</name>
    </organization>

    <properties>
        <maven.compiler.source>1.7</maven.compiler.source>
        <maven.compiler.target>1.7</maven.compiler.target>

        <java.javadoc.version>2.10.3</java.javadoc.version>

        <surefire.version>2.19</surefire.version>

        <maven.version>3.2.5</maven.version>
        <maven-plugin-plugin.version>3.4</maven-plugin-plugin.version>
        <maven-plugin-testing-harness.version>3.3.0</maven-plugin-testing-harness.version>

        <guava.version>18.0</guava.version>
        <commons-io.version>2.4</commons-io.version>
        <commons-collections.version>3.2.1</commons-collections.version>
    </properties>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-plugin-plugin</artifactId>
                    <version>${maven-plugin-plugin.version}</version>
                    <configuration>
                        <skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>${java.javadoc.version}</version>
                    <configuration>
                        <source>${maven.compiler.source}</source>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-site-plugin</artifactId>
                    <version>3.4</version>
                    <configuration>
                        <generateSitemap>true</generateSitemap>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.3</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-plugin-plugin</artifactId>
                <extensions>true</extensions>
                <executions>
                    <execution>
                        <id>mojo-descriptor</id>
                        <goals>
                            <goal>descriptor</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${surefire.version}</version>
                <configuration>
                    <argLine>-Xmx256m -XX:MaxPermSize=386m</argLine>
                    <detail>true</detail>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>org.apache.maven</groupId>
            <artifactId>maven-core</artifactId>
            <version>${maven.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.maven</groupId>
            <artifactId>maven-plugin-api</artifactId>
            <version>${maven.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.maven.plugin-tools</groupId>
            <artifactId>maven-plugin-annotations</artifactId>
            <version>${maven-plugin-plugin.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>${guava.version}</version>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>${commons-io.version}</version>
        </dependency>
        <dependency>
            <groupId>commons-collections</groupId>
            <artifactId>commons-collections</artifactId>
            <version>${commons-collections.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.maven.plugin-testing</groupId>
            <artifactId>maven-plugin-testing-harness</artifactId>
            <version>${maven-plugin-testing-harness.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
        <dependency> <!-- needed for plugin harness -->
            <groupId>org.apache.maven</groupId>
            <artifactId>maven-compat</artifactId>
            <version>${maven.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-project-info-reports-plugin</artifactId>
                <version>2.8</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-plugin-plugin</artifactId>
                <version>${maven-plugin-plugin.version}</version>
                <configuration>
                    <useJava5>true</useJava5>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>${java.javadoc.version}</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jxr-plugin</artifactId>
                <version>2.5</version>
                <configuration>
                    <linkJavadoc>true</linkJavadoc>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>taglist-maven-plugin</artifactId>
                <version>2.4</version>
            </plugin>
        </plugins>
    </reporting>

    <profiles>
        <profile>
            <id>it</id>

            <activation>
                <property>
                    <name>it.execute</name>
                </property>
            </activation>

            <build>
                <plugins>
                    <plugin>
                        <groupId>org.bitstrings.maven.plugins</groupId>
                        <artifactId>dependencypath-maven-plugin</artifactId>
                        <version>1.1.1</version>
                        <executions>
                            <execution>
                                <id>set-props</id>
                                <goals>
                                    <goal>set</goal>
                                </goals>
                                <configuration>
                                    <propertySets>
                                        <propertySet>
                                            <includes>
                                                <include>org.jmockit:jmockit:jar</include>
                                            </includes>
                                        </propertySet>
                                    </propertySets>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-invoker-plugin</artifactId>
                        <version>1.10</version>
                        <executions>
                            <execution>
                                <id>integration-test</id>
                                <goals>
                                    <goal>install</goal>
                                    <goal>run</goal>
                                </goals>
                                <configuration>
                                    <debug>false</debug>
                                    <streamLogs>true</streamLogs>
                                    <cloneProjectsTo>${project.build.directory}/it</cloneProjectsTo>
                                    <localRepositoryPath>${project.build.directory}/local-repo</localRepositoryPath>
                                    <settingsFile>src/it/settings.xml</settingsFile>
                                    <addTestClassPath>true</addTestClassPath>
                                    <postBuildHookScript>Verify</postBuildHookScript>
                                    <mavenOpts>-javaagent:${org.jmockit:jmockit:jar} -Xbootclasspath/a:${org.jmockit:jmockit:jar}:${project.build.testOutputDirectory} -XX:+UnlockDiagnosticVMOptions -XX:DisableIntrinsic=java.net.ServerSocket</mavenOpts>
                                    <goals>
                                        <goal>generate-test-resources</goal>
                                    </goals>
                                    <pomIncludes>
                                        <pomInclude>*/pom.xml</pomInclude>
                                    </pomIncludes>
                                    <pomExcludes>
                                        <pomExclude>pom.xml</pomExclude>
                                    </pomExcludes>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>
